Move hpack to own package, improve conn balancing